Modified to work with CentOS 6. These are barely tested.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -4,111 +4,19 @@
 install
 cdrom
 lang en_US.UTF-8
-langsupport en_US.UTF-8
 keyboard us
 network --device eth0 --bootproto dhcp
 
 rootpw root
 
-# default firewall with port opened for ssh and nagios
-firewall --enabled --port=22:tcp,5666:tcp
+# default firewall with port opened for ssh
+firewall --enabled --service=ssh
 
-authconfig --enableshadow --enablemd5
+authconfig --enableshadow --passalgo=sha512
 selinux --disabled
 timezone --utc America/Chicago
-bootloader --location=mbr
+bootloader --location=mbr --append="crashkernel=auto rhgb quiet"
 
 # rpms to install or not install (-)
-%packages
-@base
-@core
-device-mapper-multipath
--nss-tools
--nss_db
--acpid
--nss_ldap
--stunnel
--pam_pkcs11
--readahead
--krb5-workstation
--up2date
--ksh
--mcelog
--lftp
--crash
--aspell-en
--words
--coolkey
--aspell
--numactl
--mgetty
--fbset
--vconfig
--dump
--dosfstools
--mdadm
--libaio
--ftp
--rsync
--nano
--finger
--irqbalance
--autofs
--rdate
--conman
--wget
--pcmciautils
--yum-updatesd
--redhat-lsb
--pam_ccreds
--mlocate
--pam_smb
--sos
--mtools
--pkinit-nss
--gpm
--dhcpv6-client
--microcode_ctl
--firstboot-tui
--cpuspeed
--iptstate
--NetworkManager
--mozldap
--tcpdump
--specspo
--rsh
--setuptool
--nfs-utils
--pinfo
--ipsec-tools
--rp-pppoe
--unix2dos
--svrcore
--mtr
--mkbootdisk
--tree
--OpenIPMI
--pam_krb5
--irda-utils
--pam_passwdqc
--amtu
--rng-utils
--jwhois
--ypbind
--rdist
--system-config-network-tui
--pax
--nc
--smartmontools
--ccid
--tcsh
--telnet
--dos2unix
--setarch
--eject
--bluez-utils
--logwatch
--usbutils
--gnupg
--time
--talk
+%packages --nobase
+%end
